# equiply-backend

./: .env.example  .env.test  .pylintrc  Dockerfile  README.md  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.mail.yml  docker-compose.messaging.yml  docker-compose.monitoring.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg
app/: main.py
app/core/: logging.py
app/core/connections/: auth.py  base.py  cache.py  database.py  http.py  messaging.py  storage.py
app/core/decorators/: permissions.py
app/core/dependencies/: container.py
app/core/exceptions/: __init__.py  access.py  auth.py  groups.py  handlers.py  oauth.py  profile.py  rate_limit.py  users.py  workspaces.py
app/core/integrations/: base.py  context.py
app/core/lifespan/: __init__.py  access.py  admin.py  base.py  clients.py  lifespan.py  state.py
app/core/logging/: __init__.py  formatters.py  setup.py
app/core/messaging/: consumer.py  producer.py
app/core/middlewares/: activity.py  auth.py  docs_auth.py  logging.py  rate_limit.py
app/core/migrations/: env.py
app/core/security/: __init__.py  access.py  auth.py  cookie.py  password.py  token.py
app/core/settings/: __init__.py  base.py  config.py  logging.py  paths.py  routes.py  settings.py
app/core/storage/: base.py
app/core/utils/: generators.py  password_generator.py  username_generator.py
app/models/: __init__.py
app/models/v1/: __init__.py  access.py  base.py  brigades.py  dictionaries.py  dynamic_lists.py  dynamic_tables.py  groups.py  integrations.py  users.py  workspaces.py
app/routes/: base.py  deps.py  main.py
app/routes/v1/: __init__.py  access.py  api.py  auth.py  groups.py  oauth.py  profile.py  users.py  (+3 more)
app/schemas/: __init__.py
config/: config.toml
docs/: ai_pricing.md  alembic.md  commands.md  errors.md  http.md  oauth.md  permit.md  structure.md  tokens.md
docs/access/: base.md  decorator_require_permission.md  howto.md
docs/core/: settings.md
docs/dishka/: consepts.md  di_intro.md  quickstart.md
docs/models/: models.md  new_models.md
docs/schemas/: base.md  users.md
monitoring/grafana/: Dockerfile
scripts/: activate.sh  commands.py  flake8_formatter.py  setup.bat  setup.ps1  setup.sh
tests/: conftest.py  test_database.py
tests/mocks/: providers.py
(+208 files in other folders)
